--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ Django==4.2.5
 pytest==7.4.2
 pytest-django==4.5.2
 pre-commit==3.4.0
+pytest-cov==4.1.0
+pytest-html==4.0.2
+djangorestframework~=3.14.0
