--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
@@ -31,3 +30,12 @@ jobs:
     - name: Pytest
       run: |
         coverage run -m pytest  -v -s  
+  pre-commit:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+ 
+      - uses: pre-commit/action@v3.0.0
+        with:
+          extra_args: --all-files
