WAR-19 Create tests for Product API

--- a/.gitignore
+++ b/.gitignore
@@ -84,6 +84,7 @@ nosetests.xml
 coverage.xml
 *.cover
 .hypothesis/
+coverage_html_report/
 
 # Jupyter Notebook
 .ipynb_checkpoints
@@ -136,3 +137,5 @@ GitHub.sublime-settings
 !.vscode/launch.json
 !.vscode/extensions.json
 .history
+
+.DS_Store
